--- a/src/main/resources/assets/aquaculture/lang/en_us.json
+++ b/src/main/resources/assets/aquaculture/lang/en_us.json
@@ -285,9 +285,9 @@
   "aquaculture.soul_sand_hook.tooltip.title" : "Enticing",
   "aquaculture.soul_sand_hook.tooltip.desc" : "Increases how long you have to reel in fish",
   "aquaculture.obsidian_note_hook.tooltip.title" : "Alert",
-  "aquaculture.obsidian_note_hook.tooltip.desc" : "Plays an alert when a fish is approaching"
+  "aquaculture.obsidian_note_hook.tooltip.desc" : "Plays an alert when a fish is approaching",
   
-  "_comment": "Tooltip",
+  "_comment": "Subtitle",
   "aquaculture.subtitles.tackle_box_open": "Tacckle Box opens",
   "aquaculture.subtitles.tackle_box_close": "tackle Box closes",
   "aquaculture.subtitles.worm_farm_empty": "Worm Farm empties",
